welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: identifier expected but 'new' found.
  var T: new Array[Color] (getMondeHauteur())
         ^Array1:4: error: ';' expected but '=' found.
  for (i <- 0 to (T.length -1) {T[i]=getCouleurSol();avance()}
                                    ^Array1:7: error: ')' expected but '}' found.
} 
^